# qbuem-stack

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  TODO.md  llms-full.txt  llms.txt
bench/: CMakeLists.txt  README.md  bench_arena.cpp  bench_channel.cpp  bench_common.hpp  bench_grid.cpp  bench_http_parser.cpp  bench_pipeline.cpp  bench_router.cpp
examples/: CMakeLists.txt  README.md  async_timer.cpp  autonomous_driving_fusion.cpp  checkpoint_example.cpp  codec_example.cpp  coro_json.cpp  crypto_url_example.cpp  db_session_example.cpp  game_server.cpp  hardware_io_example.cpp  hello_world.cpp  idempotency_slo_example.cpp  io_metrics_dashboard.cpp  ipc_pipeline_example.cpp  middleware_example.cpp  pipeline_dynamic_hotswap.cpp  pipeline_factory_example.cpp  pipeline_fanout.cpp  pipeline_hardware_batching.cpp  pipeline_sensor_fusion.cpp  priority_spsc_channel_example.cpp  saga_example.cpp  scatter_gather_example.cpp  sensor_fusion_example.cpp  shm_channel_example.cpp  stream_ops_example.cpp  task_group_example.cpp  tcp_echo_server.cpp  timer_wheel_example.cpp  tracing_example.cpp  trading_platform.cpp  websocket_example.cpp  windowed_action_example.cpp
examples/01-foundation/async_timer/: README.md  async_timer.cpp
examples/01-foundation/hello_world/: README.md  hello_world.cpp
examples/01-foundation/micro_ticker/: micro_ticker_example.cpp
examples/02-network/fetch_stream/: fetch_stream_example.cpp
examples/02-network/http2_client/: http2_client_example.cpp
examples/02-network/http_fetch/: http_fetch_example.cpp
examples/02-network/tcp_echo_server/: README.md  tcp_echo_server.cpp
examples/02-network/udp_advanced/: udp_advanced_example.cpp
examples/02-network/udp_unix_socket/: README.md  udp_unix_socket_example.cpp
examples/02-network/websocket/: README.md  websocket_example.cpp
examples/03-memory/arena/: README.md  arena_example.cpp
examples/03-memory/lockfree_bench/: lockfree_bench.cpp
examples/03-memory/numa_hugepages/: README.md  numa_hugepages_example.cpp
examples/03-memory/zero_copy_arena_channel/: README.md  zero_copy_arena_channel_example.cpp
examples/04-codec-security/codec/: README.md  codec_example.cpp
examples/04-codec-security/crypto_primitives/: README.md  crypto_primitives_example.cpp
examples/04-codec-security/crypto_url/: README.md  crypto_url_example.cpp
examples/04-codec-security/security_middleware/: README.md  security_middleware_example.cpp
examples/05-pipeline/backpressure_monitor/: backpressure_monitor_example.cpp
examples/05-pipeline/dynamic_hotswap/: README.md  pipeline_dynamic_hotswap.cpp
examples/05-pipeline/dynamic_router/: dynamic_router_example.cpp
examples/05-pipeline/factory/: README.md  pipeline_factory_example.cpp
examples/05-pipeline/fanout/: README.md  pipeline_fanout.cpp
examples/05-pipeline/hardware_batching/: README.md  pipeline_hardware_batching.cpp
examples/05-pipeline/observer_health/: README.md  pipeline_observer_health_example.cpp
examples/05-pipeline/sensor_fusion/: README.md  pipeline_sensor_fusion.cpp
examples/05-pipeline/stateful_window/: stateful_window_example.cpp
examples/05-pipeline/stream_ops/: README.md  stream_ops_example.cpp
examples/05-pipeline/subpipeline_migration/: README.md  subpipeline_migration_example.cpp
examples/05-pipeline/windowed_action/: README.md  windowed_action_example.cpp
examples/06-ipc-messaging/ipc_pipeline/: README.md  ipc_pipeline_example.cpp
examples/06-ipc-messaging/message_bus/: README.md  message_bus_example.cpp
examples/06-ipc-messaging/priority_spsc_channel/: README.md  priority_spsc_channel_example.cpp
examples/06-ipc-messaging/scatter_send/: scatter_send_example.cpp
examples/06-ipc-messaging/shm_channel/: README.md  shm_channel_example.cpp
examples/07-resilience/canary/: README.md  canary_example.cpp
examples/07-resilience/checkpoint/: README.md  checkpoint_example.cpp
examples/07-resilience/idempotency_slo/: README.md  idempotency_slo_example.cpp
examples/07-resilience/resilience/: README.md  resilience_example.cpp
examples/07-resilience/saga/: README.md  saga_example.cpp
examples/07-resilience/scatter_gather/: README.md  scatter_gather_example.cpp
examples/08-observability/inspector_dashboard/: inspector_dashboard_example.cpp
examples/08-observability/lifecycle_tracing/: lifecycle_tracing_example.cpp
examples/08-observability/task_group/: README.md  task_group_example.cpp
examples/08-observability/timer_wheel/: README.md  timer_wheel_example.cpp
examples/08-observability/tracing/: README.md  tracing_example.cpp
examples/09-database/coro_json/: README.md  coro_json.cpp
examples/09-database/db_session/: README.md  db_session_example.cpp
examples/10-hardware/hardware_io/: README.md  hardware_io_example.cpp
examples/10-hardware/kqueue_sophistication/: README.md  kqueue_sophistication.cpp
examples/11-advanced-apps/autonomous_driving/: README.md  autonomous_driving_fusion.cpp
examples/11-advanced-apps/game_server/: README.md  game_server.cpp
examples/11-advanced-apps/hardware_chaos/: hardware_chaos_example.cpp
examples/11-advanced-apps/hft_matching/: hft_matching.cpp
examples/11-advanced-apps/middleware/: README.md  (+1 more)
tests/: CMakeLists.txt  arena_channel_test.cpp  arena_test.cpp  async_logger_test.cpp  canary_test.cpp  codec_test.cpp  coroutine_context_test.cpp  crypto_primitives_test.cpp  db_value_test.cpp  dispatcher_post_test.cpp  enhancement_test.cpp  grid_spatial_test.cpp  http_middleware_test.cpp  http_test.cpp  io_buf_test.cpp  kqueue_test.cpp  neon_validation.cpp  pcie_layout_test.cpp  pipeline_advanced_test.cpp  pipeline_guide_test.cpp  pipeline_integration_test.cpp  pipeline_ipc_test.cpp  pipeline_test.cpp  qbuem_json_test.cpp  reactor_test.cpp  resilience_test.cpp  scatter_gather_test.cpp  scattered_span_test.cpp  security_v15_test.cpp  shm_channel_test.cpp  shm_layout_test.cpp  socket_addr_test.cpp  spdk_layout_test.cpp  static_pipeline_integration_test.cpp  timer_wheel_test.cpp  tls_align_fix.cpp  tracing_test.cpp  url_test.cpp
(+295 files in other folders)
